# ai-session-tracker

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  PROJECT.md  README.md  report-rcatalan98-ai-session-tracker.html
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
.ralph/: .last-branch  prd.json  prd.json.example  progress.txt  prompt.md  ralph.sh
product_research/: .gitkeep  extract_sessions.py  research-plan.md
src/: bottlenecks.rs  cost.rs  export.rs  flamegraph.rs  github.rs  issues.rs  main.rs  metrics.rs  parser.rs  prs.rs  report.rs  timeline.rs
