[package]
name = "aist"
version = "0.1.0"
edition = "2021"
description = "AI Session Tracker - Find bottlenecks in AI-assisted development"
license = "MIT"

[[bin]]
name = "aist"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
colored = "2"
walkdir = "2"

